# qds-viewer

./: .gitignore  CMakeLists.txt  MyViewer.cpp  MyViewer.h  MyViewer.hpp  MyWindow.cpp  MyWindow.h  qds-spec.txt  qds-viewer.pro  top-bottom.qds
cmake/: FindLibGeom.cmake  FindTriangle.cmake
